lab1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab1-service
spec:
  selector:
    app: lab1-py-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80 
  type: NodePort
